--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,17 +28,17 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = '17'
     }
     buildFeatures {
         compose true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion '1.3.2'
+        kotlinCompilerExtensionVersion '1.4.1'
     }
     packagingOptions {
         resources {
@@ -50,8 +50,8 @@ android {
 dependencies {
 
     implementation 'androidx.core:core-ktx:1.8.0'
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
-    implementation 'androidx.activity:activity-compose:1.5.1'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
+    implementation 'androidx.activity:activity-compose:1.7.2'
     implementation platform('androidx.compose:compose-bom:2022.10.00')
     implementation 'androidx.compose.ui:ui'
     implementation 'androidx.compose.ui:ui-graphics'
@@ -69,7 +69,7 @@ dependencies {
     implementation 'io.insert-koin:koin-core:3.3.2'
     implementation 'io.insert-koin:koin-android:3.3.2'
     implementation 'io.insert-koin:koin-androidx-compose:3.4.1'
-    implementation "androidx.navigation:navigation-compose:2.6.0-beta01"
+    implementation "androidx.navigation:navigation-compose:2.7.0-alpha01"
     //room
     def room_version = "2.4.3"
     implementation "androidx.room:room-ktx:$room_version"
