--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,7 +19,13 @@ android {
         vectorDrawables {
             useSupportLibrary true
         }
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments += ["room.schemaLocation": "$projectDir/schemas".toString()]
+            }
+        }
     }
+
 
     buildTypes {
         release {
@@ -57,11 +63,11 @@ dependencies {
     implementation 'androidx.compose.ui:ui-graphics'
     implementation 'androidx.compose.ui:ui-tooling-preview'
     implementation 'androidx.compose.material3:material3'
+    implementation 'androidx.navigation:navigation-compose:2.6.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-    androidTestImplementation platform('androidx.compose:compose-bom:2022.10.00')
-    androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
+    //androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
     debugImplementation 'androidx.compose.ui:ui-tooling'
     debugImplementation 'androidx.compose.ui:ui-test-manifest'
 
@@ -69,9 +75,9 @@ dependencies {
     implementation 'io.insert-koin:koin-core:3.3.2'
     implementation 'io.insert-koin:koin-android:3.3.2'
     implementation 'io.insert-koin:koin-androidx-compose:3.4.1'
-    implementation "androidx.navigation:navigation-compose:2.7.0-alpha01"
+
     //room
-    def room_version = "2.4.3"
+    def room_version = "2.5.1"
     implementation "androidx.room:room-ktx:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
     androidTestImplementation "androidx.room:room-testing:$room_version"
